--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-xdfsfggf
+<app-navbar></app-navbar>
+<app-masthead></app-masthead>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+<hr>
+<app-footer></app-footer>
